--- a/city-skyline/index.html
+++ b/city-skyline/index.html
@@ -10,9 +10,18 @@
     <!-- back buildings view -->
     <div class="back-buildings">
       <!-- individual buildings -->
-      <div class="back-one"></div>
-      <div class="back-two">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div class="back-one center">
+        <div class="back-one-top"></div>
+        <div class="back-one-mid"></div>
+        <div class="back-one-second-mid"></div>
+        <div class="back-one-bottom"></div>
+      </div>
+      <div class="back-two center">
         <!-- building design layers -->
+        <div class="back-two-lighting"></div>
         <div class="back-two-top"></div>
         <div class="back-two-middle"></div>
         <div class="back-two-second-mid"></div>
@@ -20,9 +29,37 @@
       </div>
       <div class="back-three"></div>
       <div class="back-four"></div>
+      <div></div>
+      <div></div>
     </div>
 
     <!-- front buildings view -->
-    <!-- <div class="front-buildings"></div> -->
+    <div class="front-buildings">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div class="front-one">
+        <div class="front-one-top"></div>
+        <div class="front-one-bottom"></div>
+      </div>
+      <div></div>
+      <div class="front-two"></div>
+      <div></div>
+      <div class="front-three center">
+        <div class="front-three-top"></div>
+        <div class="front-three-mid"></div>
+        <div class="front-three-bottom"></div>
+      </div>
+      <div class="front-four center">
+        <div class="front-four-lightning"></div>
+        <div class="front-four-top"></div>
+        <div class="front-four-mid"></div>
+        <div class="front-four-bottom"></div>
+      </div>
+      <div class="front-five"></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
   </body>
 </html>
