--- a/city-skyline/index.html
+++ b/city-skyline/index.html
@@ -8,27 +8,27 @@
   </head>
   <body>
     <!-- back buildings view -->
-    <div class="back-buildings">
+    <div class="back-buildings sky-view">
       <!-- individual buildings -->
       <div></div>
       <div></div>
       <div></div>
       <div class="back-one center">
         <div class="back-one-top"></div>
-        <div class="back-one-mid"></div>
-        <div class="back-one-second-mid"></div>
-        <div class="back-one-bottom"></div>
+        <div class="back-one-mid shadow"></div>
+        <div class="back-one-second-mid shadow"></div>
+        <div class="back-one-bottom shadow"></div>
       </div>
       <div class="back-two center">
         <!-- building design layers -->
         <div class="back-two-lighting"></div>
-        <div class="back-two-top"></div>
-        <div class="back-two-middle"></div>
-        <div class="back-two-second-mid"></div>
-        <div class="back-two-bottom"></div>
+        <div class="back-two-top shadow"></div>
+        <div class="back-two-middle shadow"></div>
+        <div class="back-two-second-mid shadow"></div>
+        <div class="back-two-bottom shadow"></div>
       </div>
-      <div class="back-three"></div>
-      <div class="back-four"></div>
+      <div class="back-three shadow"></div>
+      <div class="back-four shadow"></div>
       <div></div>
       <div></div>
     </div>
@@ -40,23 +40,23 @@
       <div></div>
       <div class="front-one">
         <div class="front-one-top"></div>
-        <div class="front-one-bottom"></div>
+        <div class="front-one-bottom shadow-left"></div>
       </div>
       <div></div>
-      <div class="front-two"></div>
+      <div class="front-two shadow"></div>
       <div></div>
       <div class="front-three center">
         <div class="front-three-top"></div>
-        <div class="front-three-mid"></div>
-        <div class="front-three-bottom"></div>
+        <div class="front-three-mid shadow"></div>
+        <div class="front-three-bottom shadow"></div>
       </div>
       <div class="front-four center">
         <div class="front-four-lightning"></div>
-        <div class="front-four-top"></div>
-        <div class="front-four-mid"></div>
-        <div class="front-four-bottom"></div>
+        <div class="front-four-top shadow"></div>
+        <div class="front-four-mid shadow"></div>
+        <div class="front-four-bottom shadow"></div>
       </div>
-      <div class="front-five"></div>
+      <div class="front-five shadow"></div>
       <div></div>
       <div></div>
       <div></div>
