--- a/city-skyline/index.html
+++ b/city-skyline/index.html
@@ -7,59 +7,61 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- back buildings view -->
-    <div class="back-buildings sky-view">
-      <!-- individual buildings -->
-      <div></div>
-      <div></div>
-      <div></div>
-      <div class="back-one center">
-        <div class="back-one-top"></div>
-        <div class="back-one-mid shadow"></div>
-        <div class="back-one-second-mid shadow"></div>
-        <div class="back-one-bottom shadow"></div>
+    <main>
+      <!-- back buildings view -->
+      <div class="back-buildings sky-view">
+        <!-- individual buildings -->
+        <div></div>
+        <div></div>
+        <div></div>
+        <div class="back-one center">
+          <div class="back-one-top"></div>
+          <div class="back-one-mid shadow"></div>
+          <div class="back-one-second-mid shadow"></div>
+          <div class="back-one-bottom shadow"></div>
+        </div>
+        <div class="back-two center">
+          <!-- building design layers -->
+          <div class="back-two-lighting"></div>
+          <div class="back-two-top shadow"></div>
+          <div class="back-two-middle shadow"></div>
+          <div class="back-two-second-mid shadow"></div>
+          <div class="back-two-bottom shadow"></div>
+        </div>
+        <div class="back-three shadow"></div>
+        <div class="back-four shadow"></div>
+        <div></div>
+        <div></div>
       </div>
-      <div class="back-two center">
-        <!-- building design layers -->
-        <div class="back-two-lighting"></div>
-        <div class="back-two-top shadow"></div>
-        <div class="back-two-middle shadow"></div>
-        <div class="back-two-second-mid shadow"></div>
-        <div class="back-two-bottom shadow"></div>
-      </div>
-      <div class="back-three shadow"></div>
-      <div class="back-four shadow"></div>
-      <div></div>
-      <div></div>
-    </div>
 
-    <!-- front buildings view -->
-    <div class="front-buildings">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div class="front-one">
-        <div class="front-one-top"></div>
-        <div class="front-one-bottom shadow-left"></div>
+      <!-- front buildings view -->
+      <div class="front-buildings">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div class="front-one">
+          <div class="front-one-top"></div>
+          <div class="front-one-bottom shadow-left"></div>
+        </div>
+        <div></div>
+        <div class="front-two shadow"></div>
+        <div></div>
+        <div class="front-three center">
+          <div class="front-three-top"></div>
+          <div class="front-three-mid shadow"></div>
+          <div class="front-three-bottom shadow"></div>
+        </div>
+        <div class="front-four center">
+          <div class="front-four-lightning"></div>
+          <div class="front-four-top shadow"></div>
+          <div class="front-four-mid shadow"></div>
+          <div class="front-four-bottom shadow"></div>
+        </div>
+        <div class="front-five shadow"></div>
+        <div></div>
+        <div></div>
+        <div></div>
       </div>
-      <div></div>
-      <div class="front-two shadow"></div>
-      <div></div>
-      <div class="front-three center">
-        <div class="front-three-top"></div>
-        <div class="front-three-mid shadow"></div>
-        <div class="front-three-bottom shadow"></div>
-      </div>
-      <div class="front-four center">
-        <div class="front-four-lightning"></div>
-        <div class="front-four-top shadow"></div>
-        <div class="front-four-mid shadow"></div>
-        <div class="front-four-bottom shadow"></div>
-      </div>
-      <div class="front-five shadow"></div>
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
+    </main>
   </body>
 </html>
